# scheduler

./: .gitignore  LICENSE  Makefile
.github/workflows/: go.yml
api/: openapi.yaml
back/appointment-service/: go.mod  go.sum
back/appointment-service-cpp/: CMakeLists.txt  interval.cppm  interval_test.cpp
back/appointment-service/api/: api.go  api_time_slots.go  api_time_slots_test.go  api_webapp_test.go  auth.go  auth_otp.go  http_io.go  interval_rrule.go  logger.go  request_id.go  routers.go  rrule_storage.go  server_test.go  user_bots.go
back/appointment-service/api/types/: model_available_slots.go  model_slot.go  model_slots_request.go
back/appointment-service/cmd/bot/: bot.go  config.go
back/appointment-service/cmd/service/: config.go  main.go
back/appointment-service/internal/: appointment.go  caller.go  caller_test.go  crypto.go  default.go  errors.go  interval.go  interval_builder.go  interval_provider.go  interval_rrule.go  interval_rrule_test.go  interval_set.go  interval_set_builder.go  interval_test.go  intervals.go  intervals_test.go  logger.go  no_copy.go  periodic.go  request_limit.go  slices.go  slices_test.go  slot.go  temp_link.go  time.go  time_test.go  types.go
back/appointment-service/migrations/: 000001_create_back_tables.down.sql  000001_create_back_tables.up.sql  000002_add_business_slot_settings.down.sql  000002_add_business_slot_settings.up.sql
back/appointment-service/webapp/: app.js  index.html  styles.css
front/: calendar.html  calendar2.html  login.html  rrule_editor.html  rules_list.html
(+88 files in other folders)
